hugo/Kube/backup-deployment-nginx-hugo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hugo
  namespace: hugo
  labels:
    app: nginx-hugo
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hugo
      version: v1
  template:
    metadata:
      labels:
        app: nginx-hugo
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
          - name: nas-volume
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nas-volume
          persistentVolumeClaim:
            claimName: nas-pvc
