hugo/Kube/nginx-hugo.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hugo
  namespace: hugo
  labels:
    app: nginx-hugo
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: hugo-public
      mountPath: /usr/share/nginx/html
  volumes:
  - name: hugo-public
    hostPath:
      path: /Users/travisditmanson/home_lab/hugo/docker/blog/public
      type: Directory
