hugo/Kube/svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hugo
  namespace: hugo
spec:
  selector:
    app: nginx-hugo
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: LoadBalancer
