hugo/Kube/ingerss-nginx-hugo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: hugo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik  # Make sure this is set
  rules:
    - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-svc
            port:
              number: 80
